Mon May 19 10:51:25 1997  Eric M. Hopper  <hopper@omnifarious.mn.org>

	* UniEvent/OSConditionManager.h
	(OSConditionManager::WaitConditions): Realized that WaitConditions
 	needed to know which dispatcher to post events to.

	* UniEvent/StandCondManager.h:
	* UniEvent/StandObConditions.h:
	* StandCondManager.cxx:
	* StandObConditions.cxx: Added new classes to implement some
 	standard ConditionManger and ObjectConditions functionality.


Sun May 18 18:28:35 1997  Eric M. Hopper  <hopper@omnifarious.mn.org>

	* UniEvent/OSObjectConditions.h: 
	* UniEvent/Dispatcher.h: 
	* UniEvent/OSConditionManager.h: Firmed up interface for
 	OSConditionManager, and OSObjectConditions classes, and related
 	member functions in other classes.

	* OSObjectConditions.cxx: Added to make place for inline member
 	functions and identifier constant to be.

	* UNEVT_ClassIdent.cxx: Added new comment for OSObjectConditions
	class.

Mon May 12 19:58:59 1997  Eric M. Hopper  <hopper@omnifarious.mn.org>

	* UniEvent/EventPtr.h:
	* UniEvent/EventPtrT.h:
	* EventPtr.cxx: Added new EventPtr classes to maintain reference
 	count on UNIEvent classes.

	* UniEvent/Event.h:
	* UniEvent/Dispatcher.h:
	* UniEvent/SimpleDispatcher.h:
	* SimpleDispatcherImp.cxx:
	* UNEVT_ClassIdent.cxx: Various changes to make UNIEvent a
 	reference counted class, and to add (and use) new Ptr types to
 	automatically maintain the reference count.

Wed Apr 16 13:07:08 1997  Eric M. Hopper  <hopper@omnifarious.mn.org>

	* UniEvent/OSConditionManager.h:
	* OSConditionManager.cxx: Added new class for managing OS
	conditions that can trigger events.

Sun Apr  6 10:28:31 1997  Eric M. Hopper  <hopper@omnifarious.mn.org>

	* GNUmakefile.in: Added new library CCs, a framework for tests,
	and a clean target.

	* UniEvent/Dispatcher.h (class UNIDispatcher): Added explanatory
 	comment so I wouldn't try to smooth a needed rough edge out of the
 	design again.

	* UniEvent/SimpleDispatcher.h (class UNISimpleDispatcher): Removed